# LLM-Client

./: .coverage  .gitignore  Design.md  README.md  config.toml  extract_docx.py  pyproject.toml  seed_data.py  test.py  test_concurrency.py  test_prompt_engine.py  week3_plan.txt
src/: audit_log.json  manifest.json
src/cli/: app.py  audit_cmd.py  run_cmd.py  template_cmd.py
src/core/: cli_config.py  config.py  exceptions.py  pipeline.py  resilience.py  structured_call.py
src/llm/: anthropic_client.py  base.py  deepseek_client.py  factory.py  openai_client.py  schemas.py  tokentracker.py
src/parser/: output_parser.py
src/prompt_engine/: registry.py  schemas.py  template.py
src/prompts/: base_system.j2  code_review.j2  resume_review.j2
src/schemas/: code_review.py
tests/: conftest.py  test_anthropic_client.py  test_cli.py  test_config.py  test_factory.py  test_integration.py  test_openai_client.py  test_parser.py  test_registry.py  test_resilience.py  test_structure_call.py  test_template.py
