[project]
name = "llm-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiolimiter>=1.2.1",
    "anthropic>=0.83.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "openai>=2.21.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "rich>=14.3.2",
    "tenacity>=9.1.2",
    "tiktoken>=0.12.0",
    "tomli>=2.4.0",
    "typer>=0.24.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.coverage.run]
source = ["src"]


[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.ruff]
exclude = [
    ".claude/",
    "test_concurrency.py",
    "test_new.py",
    "test_prompt_engine.py",
    "extract_docx.py",
]
